Update recipe app - refactor full code

--- a/breakfast.html
+++ b/breakfast.html
@@ -1,38 +1,52 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>Breakfast - Trung_cooKING</title>
-  <link rel="stylesheet" href="style.css">
-</head>
-<body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Breakfast - Trung_cooKING</title>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <header>
+      <h1>🍳 Breakfast</h1>
+      <p>Start your day with energy</p>
+    </header>
 
-<header>
-  <h1>🍳 Breakfast</h1>
-  <p>Start your day with energy</p>
-</header>
+    <section class="content">
+      <div class="card">
+        <h3>Pancakes</h3>
+        <p>Fluffy pancakes with syrup</p>
+        <a href="pancake.html">View Recipe</a>
+      </div>
 
-<nav>
-  <a href="index.html">Home</a>
-  <a href="lunch.html">Lunch</a>
-  <a href="dinner.html">Dinner</a>
-</nav>
+      <div class="card">
+        <h3>Omelette</h3>
+        <p>Egg omelette with vegetables</p>
+        <a href="omelette.html">View Recipe</a>
+      </div>
+    </section>
 
-<section class="content">
-
-  <div class="card">
-    <h3>Pancakes</h3>
-    <p>Fluffy pancakes with syrup</p>
-    <a href="pancake.html">View Recipe</a>
-  </div>
-
-  <div class="card">
-    <h3>Omelette</h3>
-    <p>Egg omelette with vegetables</p>
-    <a href="omelette.html">View Recipe</a>
-  </div>
-
-</section>
-
-</body>
+    <nav class="bottom-nav">
+      <a href="breakfast.html" class="active">
+        <span class="nav-icon">🍳</span>
+        <span>Breakfast</span>
+      </a>
+      <a href="lunch.html">
+        <span class="nav-icon">🥪</span>
+        <span>Lunch</span>
+      </a>
+      <a href="index.html">
+        <span class="nav-icon home-icon">🏠</span>
+        <span>Home</span>
+      </a>
+      <a href="dinner.html">
+        <span class="nav-icon">🍝</span>
+        <span>Dinner</span>
+      </a>
+      <a href="#">
+        <span class="nav-icon">➕</span>
+        <span>Add</span>
+      </a>
+    </nav>
+  </body>
 </html>
