--- a/pasta.html
+++ b/pasta.html
@@ -1,36 +1,54 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>Pasta Recipe</title>
-  <link rel="stylesheet" href="style.css">
-</head>
-<body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Pasta Recipe</title>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <header>
+      <h1>📖 Pasta</h1>
+    </header>
 
-<header>
-  <h1>📖 Pasta</h1>
-</header>
+    <section class="content">
+      <h2>Ingredients</h2>
+      <ul>
+        <li>Pasta</li>
+        <li>Tomato sauce</li>
+        <li>Garlic</li>
+        <li>Cheese</li>
+      </ul>
 
-<nav>
-  <a href="dinner.html">Back to Dinner</a>
-</nav>
+      <h2>Steps</h2>
+      <ol>
+        <li>Boil pasta</li>
+        <li>Prepare sauce</li>
+        <li>Mix pasta with sauce</li>
+      </ol>
+    </section>
 
-<section class="content">
-  <h2>Ingredients</h2>
-  <ul>
-    <li>Pasta</li>
-    <li>Tomato sauce</li>
-    <li>Garlic</li>
-    <li>Cheese</li>
-  </ul>
-
-  <h2>Steps</h2>
-  <ol>
-    <li>Boil pasta</li>
-    <li>Prepare sauce</li>
-    <li>Mix pasta with sauce</li>
-  </ol>
-</section>
-
-</body>
+    <nav class="bottom-nav">
+      <a href="breakfast.html">
+        <span class="nav-icon">🍳</span>
+        <span>Breakfast</span>
+      </a>
+      <a href="lunch.html">
+        <span class="nav-icon">🥪</span>
+        <span>Lunch</span>
+      </a>
+      <a href="index.html">
+        <span class="nav-icon home-icon">🏠</span>
+        <span>Home</span>
+      </a>
+      <a href="dinner.html">
+        <span class="nav-icon">🍝</span>
+        <span>Dinner</span>
+      </a>
+      <a href="#">
+        <span class="nav-icon">➕</span>
+        <span>Add</span>
+      </a>
+    </nav>
+  </body>
 </html>
