--- a/chicken.html
+++ b/chicken.html
@@ -45,7 +45,7 @@
         <span class="nav-icon">🍝</span>
         <span>Dinner</span>
       </a>
-      <a href="#">
+      <a href="add.html">
         <span class="nav-icon">➕</span>
         <span>Add</span>
       </a>
