--- a/breakfast.html
+++ b/breakfast.html
@@ -43,7 +43,7 @@
         <span class="nav-icon">🍝</span>
         <span>Dinner</span>
       </a>
-      <a href="#">
+      <a href="add.html">
         <span class="nav-icon">➕</span>
         <span>Add</span>
       </a>
