--- a/chicken.html
+++ b/chicken.html
@@ -12,20 +12,86 @@
     </header>
 
     <section class="content">
+      <div class="recipe-header">
+        <div class="recipe-meta">
+          <span class="meta-item">⏱️ 30 mins</span>
+          <span class="meta-item">👥 4 servings</span>
+          <span class="meta-item">📊 Medium</span>
+        </div>
+      </div>
+
       <h2>Ingredients</h2>
       <ul>
-        <li>Chicken breast</li>
-        <li>Salt</li>
-        <li>Pepper</li>
-        <li>Olive oil</li>
+        <li>4 boneless, skinless chicken breasts (about 6 oz each)</li>
+        <li>3 tablespoons olive oil</li>
+        <li>2 tablespoons lemon juice</li>
+        <li>2 teaspoons dried oregano</li>
+        <li>2 teaspoons garlic powder</li>
+        <li>1 teaspoon paprika</li>
+        <li>1 teaspoon onion powder</li>
+        <li>½ teaspoon black pepper</li>
+        <li>1 teaspoon salt</li>
+        <li>2 cloves garlic, minced</li>
+        <li>Fresh parsley for garnish</li>
+        <li>Lemon wedges for serving</li>
       </ul>
 
-      <h2>Steps</h2>
+      <h2>Instructions</h2>
       <ol>
-        <li>Season chicken</li>
-        <li>Heat grill pan</li>
-        <li>Grill until cooked</li>
+        <li>
+          <strong>Prepare chicken:</strong> Pat chicken breasts dry with paper
+          towels. If thick, pound to even thickness (about ½ inch).
+        </li>
+        <li>
+          <strong>Make marinade:</strong> In a bowl, whisk together olive oil,
+          lemon juice, oregano, garlic powder, paprika, onion powder, pepper,
+          and salt.
+        </li>
+        <li>
+          <strong>Marinate chicken:</strong> Place chicken in a zip-top bag or
+          shallow dish. Pour marinade over chicken and refrigerate for 30
+          minutes to 2 hours.
+        </li>
+        <li>
+          <strong>Preheat grill:</strong> Heat grill or grill pan to medium-high
+          heat (about 400-450°F).
+        </li>
+        <li>
+          <strong>Remove chicken:</strong> Take chicken out of marinade and let
+          excess drip off. Discard remaining marinade.
+        </li>
+        <li>
+          <strong>Grill chicken:</strong> Place chicken on grill and cook for
+          6-8 minutes per side.
+        </li>
+        <li>
+          <strong>Check doneness:</strong> Internal temperature should reach
+          165°F when tested with meat thermometer.
+        </li>
+        <li>
+          <strong>Rest chicken:</strong> Transfer to a cutting board and let
+          rest for 5-10 minutes.
+        </li>
+        <li>
+          <strong>Garnish and serve:</strong> Slice chicken against the grain,
+          sprinkle with fresh parsley, and serve with lemon wedges.
+        </li>
       </ol>
+
+      <div class="recipe-tips">
+        <h3>💡 Pro Tips</h3>
+        <ul>
+          <li>
+            Don't skip the resting step - it keeps chicken juicy and tender
+          </li>
+          <li>
+            For grill marks, place chicken at 45-degree angle, then rotate 90
+            degrees halfway through cooking each side
+          </li>
+          <li>If using a gas grill, oil the grates to prevent sticking</li>
+          <li>For extra flavor, add wood chips to the grill for smoking</li>
+        </ul>
+      </div>
     </section>
 
     <nav class="bottom-nav">
