--- a/pancake.html
+++ b/pancake.html
@@ -12,20 +12,76 @@
     </header>
 
     <section class="content">
+      <div class="recipe-header">
+        <div class="recipe-meta">
+          <span class="meta-item">⏱️ 15 mins</span>
+          <span class="meta-item">👥 4 servings</span>
+          <span class="meta-item">📊 Easy</span>
+        </div>
+      </div>
+
       <h2>Ingredients</h2>
       <ul>
-        <li>Flour</li>
-        <li>Eggs</li>
-        <li>Milk</li>
-        <li>Sugar</li>
+        <li>2 cups all-purpose flour</li>
+        <li>2 tablespoons granulated sugar</li>
+        <li>2 teaspoons baking powder</li>
+        <li>1 teaspoon salt</li>
+        <li>2 large eggs</li>
+        <li>1¾ cups milk</li>
+        <li>¼ cup unsalted butter, melted</li>
+        <li>1 teaspoon vanilla extract</li>
+        <li>Butter or oil for cooking</li>
       </ul>
 
-      <h2>Steps</h2>
+      <h2>Instructions</h2>
       <ol>
-        <li>Mix ingredients</li>
-        <li>Heat pan</li>
-        <li>Cook until golden</li>
+        <li>
+          <strong>Mix dry ingredients:</strong> In a large bowl, whisk together
+          flour, sugar, baking powder, and salt.
+        </li>
+        <li>
+          <strong>Combine wet ingredients:</strong> In another bowl, beat eggs,
+          then add milk, melted butter, and vanilla extract.
+        </li>
+        <li>
+          <strong>Make batter:</strong> Pour wet ingredients into dry
+          ingredients and stir until just combined. Don't overmix - lumps are
+          okay.
+        </li>
+        <li>
+          <strong>Rest batter:</strong> Let the batter rest for 5 minutes while
+          heating your griddle or pan.
+        </li>
+        <li>
+          <strong>Heat pan:</strong> Heat a non-stick pan or griddle over medium
+          heat. Add a little butter or oil.
+        </li>
+        <li>
+          <strong>Cook pancakes:</strong> Pour ¼ cup batter for each pancake.
+          Cook until bubbles form on surface and edges look dry (about 2-3
+          minutes).
+        </li>
+        <li>
+          <strong>Flip and finish:</strong> Flip pancakes and cook until golden
+          brown on the other side (1-2 minutes more).
+        </li>
+        <li>
+          <strong>Serve immediately:</strong> Serve hot with maple syrup,
+          butter, fresh berries, or your favorite toppings.
+        </li>
       </ol>
+
+      <div class="recipe-tips">
+        <h3>💡 Pro Tips</h3>
+        <ul>
+          <li>Don't overmix the batter - a few lumps make fluffier pancakes</li>
+          <li>Keep pancakes warm in a 200°F oven while cooking the rest</li>
+          <li>Add blueberries or chocolate chips to batter for variety</li>
+          <li>
+            For extra fluffy pancakes, separate eggs and beat whites until stiff
+          </li>
+        </ul>
+      </div>
     </section>
 
     <nav class="bottom-nav">
