--- a/salad.html
+++ b/salad.html
@@ -12,20 +12,90 @@
     </header>
 
     <section class="content">
+      <div class="recipe-header">
+        <div class="recipe-meta">
+          <span class="meta-item">⏱️ 20 mins</span>
+          <span class="meta-item">👥 4 servings</span>
+          <span class="meta-item">📊 Easy</span>
+        </div>
+      </div>
+
       <h2>Ingredients</h2>
       <ul>
-        <li>Grilled chicken</li>
-        <li>Lettuce</li>
-        <li>Tomatoes</li>
-        <li>Salad dressing</li>
+        <li>2 boneless, skinless chicken breasts (about 1 lb total)</li>
+        <li>1 tablespoon olive oil</li>
+        <li>1 teaspoon garlic powder</li>
+        <li>½ teaspoon paprika</li>
+        <li>Salt and black pepper to taste</li>
+        <li>6 cups mixed lettuce (romaine, butter lettuce, or mixed greens)</li>
+        <li>1 cup cherry tomatoes, halved</li>
+        <li>1 cucumber, diced</li>
+        <li>½ red onion, thinly sliced</li>
+        <li>1 avocado, sliced</li>
+        <li>¼ cup crumbled feta cheese (optional)</li>
       </ul>
 
-      <h2>Steps</h2>
+      <h2>Dressing</h2>
+      <ul>
+        <li>¼ cup olive oil</li>
+        <li>2 tablespoons red wine vinegar</li>
+        <li>1 teaspoon Dijon mustard</li>
+        <li>1 teaspoon honey</li>
+        <li>1 small garlic clove, minced</li>
+        <li>Salt and pepper to taste</li>
+      </ul>
+
+      <h2>Instructions</h2>
       <ol>
-        <li>Cut chicken into pieces</li>
-        <li>Mix vegetables</li>
-        <li>Add chicken and dressing</li>
+        <li>
+          <strong>Prepare chicken:</strong> Season chicken breasts with olive
+          oil, garlic powder, paprika, salt, and pepper.
+        </li>
+        <li>
+          <strong>Cook chicken:</strong> Heat a grill pan or skillet over
+          medium-high heat. Cook chicken for 6-7 minutes per side until cooked
+          through (165°F internal temperature).
+        </li>
+        <li>
+          <strong>Rest chicken:</strong> Transfer chicken to a cutting board and
+          let rest for 5 minutes, then slice into strips.
+        </li>
+        <li>
+          <strong>Make dressing:</strong> In a small bowl, whisk together olive
+          oil, red wine vinegar, Dijon mustard, honey, and minced garlic.
+        </li>
+        <li>
+          <strong>Prepare vegetables:</strong> Wash and dry lettuce. Halve
+          cherry tomatoes, dice cucumber, and thinly slice red onion.
+        </li>
+        <li>
+          <strong>Assemble salad:</strong> In a large bowl, combine lettuce,
+          tomatoes, cucumber, red onion, and avocado.
+        </li>
+        <li>
+          <strong>Add chicken:</strong> Top salad with sliced chicken and feta
+          cheese if using.
+        </li>
+        <li>
+          <strong>Dress and serve:</strong> Drizzle with dressing just before
+          serving. Toss gently and serve immediately.
+        </li>
       </ol>
+
+      <div class="recipe-tips">
+        <h3>💡 Pro Tips</h3>
+        <ul>
+          <li>
+            For extra flavor, marinate chicken for 30 minutes before cooking
+          </li>
+          <li>Use pre-cooked chicken to save time - just slice and add</li>
+          <li>Add croutons or nuts for extra crunch</li>
+          <li>
+            Dressing can be made ahead and stored in refrigerator for up to 3
+            days
+          </li>
+        </ul>
+      </div>
     </section>
 
     <nav class="bottom-nav">
