--- a/sandwich.html
+++ b/sandwich.html
@@ -12,20 +12,78 @@
     </header>
 
     <section class="content">
+      <div class="recipe-header">
+        <div class="recipe-meta">
+          <span class="meta-item">⏱️ 15 mins</span>
+          <span class="meta-item">👥 2 servings</span>
+          <span class="meta-item">📊 Easy</span>
+        </div>
+      </div>
+
       <h2>Ingredients</h2>
       <ul>
-        <li>Bread slices</li>
-        <li>Ham or chicken</li>
-        <li>Cheese</li>
-        <li>Lettuce</li>
+        <li>4 slices bread (sourdough, whole wheat, or your choice)</li>
+        <li>
+          4-6 ounces sliced deli meat (turkey, ham, roast beef, or chicken)
+        </li>
+        <li>2 slices cheese (Swiss, cheddar, provolone, or your choice)</li>
+        <li>2 lettuce leaves (romaine, butter lettuce, or iceberg)</li>
+        <li>2-3 tomato slices</li>
+        <li>¼ red onion, thinly sliced</li>
+        <li>2 tablespoons mayonnaise or mustard</li>
+        <li>1 tablespoon butter, softened</li>
+        <li>Salt and pepper to taste</li>
+        <li>Optional: pickles, bacon, avocado, or sprouts</li>
       </ul>
 
-      <h2>Steps</h2>
+      <h2>Instructions</h2>
       <ol>
-        <li>Place ingredients on bread</li>
-        <li>Add sauce if desired</li>
-        <li>Close sandwich and serve</li>
+        <li>
+          <strong>Prepare bread:</strong> Toast bread slices if desired. Let
+          them cool slightly.
+        </li>
+        <li>
+          <strong>Spread base:</strong> On two bread slices, spread mayonnaise
+          or mustard evenly.
+        </li>
+        <li>
+          <strong>Layer ingredients:</strong> Add lettuce leaves, then tomato
+          slices, and onion rings.
+        </li>
+        <li>
+          <strong>Add meat and cheese:</strong> Layer deli meat and cheese
+          slices on top of vegetables.
+        </li>
+        <li><strong>Season:</strong> Add salt and pepper to taste.</li>
+        <li>
+          <strong>Complete sandwich:</strong> Top with remaining bread slices.
+        </li>
+        <li>
+          <strong>Optional grilling:</strong> For a grilled sandwich, butter
+          outside of bread and grill in pan until golden and cheese melts.
+        </li>
+        <li>
+          <strong>Serve:</strong> Cut diagonally and serve immediately with
+          pickles or chips.
+        </li>
       </ol>
+
+      <div class="recipe-tips">
+        <h3>💡 Pro Tips</h3>
+        <ul>
+          <li>
+            Use room temperature ingredients for better flavor combination
+          </li>
+          <li>
+            To prevent sogginess, toast bread and add a thin layer of butter or
+            mayo as a barrier
+          </li>
+          <li>For extra flavor, add herbs like basil or arugula</li>
+          <li>
+            Cut crusts off for tea sandwiches or keep on for heartier sandwiches
+          </li>
+        </ul>
+      </div>
     </section>
 
     <nav class="bottom-nav">
