--- a/breakfast.html
+++ b/breakfast.html
@@ -13,16 +13,76 @@
     </header>
 
     <section class="content">
-      <div class="card">
-        <h3>Pancakes</h3>
-        <p>Fluffy pancakes with syrup</p>
-        <a href="pancake.html">View Recipe</a>
+      <div class="search-section">
+        <div class="search-container">
+          <input
+            type="text"
+            id="searchInput"
+            placeholder="🔍 Search breakfast recipes..."
+            class="search-input"
+          />
+          <button class="search-btn" onclick="searchRecipes()">Search</button>
+        </div>
       </div>
 
-      <div class="card">
-        <h3>Omelette</h3>
-        <p>Egg omelette with vegetables</p>
-        <a href="omelette.html">View Recipe</a>
+      <h2 class="section-title">All Breakfast Recipes</h2>
+
+      <div class="recipe-grid">
+        <div class="recipe-card">
+          <div class="recipe-image">🥞</div>
+          <div class="recipe-info">
+            <h3>Fluffy Pancakes</h3>
+            <div class="recipe-meta-inline">
+              <span class="difficulty easy">Easy</span>
+              <span class="rating">⭐⭐⭐⭐⭐⭐</span>
+              <span class="time">15 mins</span>
+            </div>
+            <p>
+              Classic fluffy breakfast pancakes perfect for weekend mornings
+            </p>
+            <a href="pancake.html">View Recipe</a>
+          </div>
+        </div>
+
+        <div class="recipe-card">
+          <div class="recipe-image">🍳</div>
+          <div class="recipe-info">
+            <h3>Classic Omelette</h3>
+            <div class="recipe-meta-inline">
+              <span class="difficulty easy">Easy</span>
+              <span class="rating">⭐⭐⭐⭐⭐</span>
+              <span class="time">10 mins</span>
+            </div>
+            <p>Fluffy French-style omelette with your favorite fillings</p>
+            <a href="omelette.html">View Recipe</a>
+          </div>
+        </div>
+      </div>
+
+      <h2 class="section-title">Popular Breakfast</h2>
+
+      <div class="popular-grid">
+        <div class="popular-card">
+          <div class="popular-image">🥞</div>
+          <div class="popular-info">
+            <h4>Fluffy Pancakes</h4>
+            <div class="popular-meta">
+              <span class="rating">⭐⭐⭐⭐⭐⭐</span>
+              <span class="difficulty easy">Easy</span>
+            </div>
+          </div>
+        </div>
+
+        <div class="popular-card">
+          <div class="popular-image">🍳</div>
+          <div class="popular-info">
+            <h4>Classic Omelette</h4>
+            <div class="popular-meta">
+              <span class="rating">⭐⭐⭐⭐⭐</span>
+              <span class="difficulty easy">Easy</span>
+            </div>
+          </div>
+        </div>
       </div>
     </section>
 
@@ -48,5 +108,92 @@
         <span>Add</span>
       </a>
     </nav>
+
+    <script>
+      // Breakfast recipe data
+      const breakfastRecipes = [
+        {
+          name: "Fluffy Pancakes",
+          difficulty: "easy",
+          rating: 5,
+          time: "15 mins",
+          emoji: "🥞",
+          description:
+            "Classic fluffy breakfast pancakes perfect for weekend mornings",
+          url: "pancake.html",
+        },
+        {
+          name: "Classic Omelette",
+          difficulty: "easy",
+          rating: 4,
+          time: "10 mins",
+          emoji: "🍳",
+          description:
+            "Fluffy French-style omelette with your favorite fillings",
+          url: "omelette.html",
+        },
+      ];
+
+      // Search functionality
+      function searchRecipes() {
+        const searchTerm = document
+          .getElementById("searchInput")
+          .value.toLowerCase();
+        const recipeGrid = document.querySelector(".recipe-grid");
+
+        if (searchTerm === "") {
+          displayAllRecipes();
+          return;
+        }
+
+        const filteredRecipes = breakfastRecipes.filter(
+          (recipe) =>
+            recipe.name.toLowerCase().includes(searchTerm) ||
+            recipe.description.toLowerCase().includes(searchTerm),
+        );
+
+        displayRecipes(filteredRecipes, recipeGrid);
+      }
+
+      // Display all recipes
+      function displayAllRecipes() {
+        const recipeGrid = document.querySelector(".recipe-grid");
+        displayRecipes(breakfastRecipes, recipeGrid);
+      }
+
+      // Display recipes in grid
+      function displayRecipes(recipesToDisplay, container) {
+        container.innerHTML = recipesToDisplay
+          .map(
+            (recipe) => `
+    <div class="recipe-card">
+      <div class="recipe-image">${recipe.emoji}</div>
+      <div class="recipe-info">
+        <h3>${recipe.name}</h3>
+        <div class="recipe-meta-inline">
+          <span class="difficulty ${recipe.difficulty}">${recipe.difficulty}</span>
+          <span class="rating">${"⭐".repeat(recipe.rating)}</span>
+          <span class="time">${recipe.time}</span>
+        </div>
+        <p>${recipe.description}</p>
+        <a href="${recipe.url}">View Recipe</a>
+      </div>
+    </div>
+  `,
+          )
+          .join("");
+      }
+
+      // Search on Enter key
+      document
+        .getElementById("searchInput")
+        .addEventListener("keypress", function (e) {
+          if (e.key === "Enter") {
+            searchRecipes();
+          }
+        });
+
+      displayAllRecipes();
+    </script>
   </body>
 </html>
