--- a/dinner.html
+++ b/dinner.html
@@ -12,16 +12,74 @@
     </header>
 
     <section class="content">
-      <div class="card">
-        <h3>Pasta</h3>
-        <p>Classic Italian pasta</p>
-        <a href="pasta.html">View Recipe</a>
+      <div class="search-section">
+        <div class="search-container">
+          <input
+            type="text"
+            id="searchInput"
+            placeholder="🔍 Search dinner recipes..."
+            class="search-input"
+          />
+          <button class="search-btn" onclick="searchRecipes()">Search</button>
+        </div>
       </div>
 
-      <div class="card">
-        <h3>Grilled Chicken</h3>
-        <p>Protein-rich dinner</p>
-        <a href="chicken.html">View Recipe</a>
+      <h2 class="section-title">All Dinner Recipes</h2>
+
+      <div class="recipe-grid">
+        <div class="recipe-card">
+          <div class="recipe-image">🍝</div>
+          <div class="recipe-info">
+            <h3>Classic Tomato Pasta</h3>
+            <div class="recipe-meta-inline">
+              <span class="difficulty medium">Medium</span>
+              <span class="rating">⭐⭐⭐⭐⭐⭐</span>
+              <span class="time">25 mins</span>
+            </div>
+            <p>Traditional pasta with rich tomato sauce and fresh herbs</p>
+            <a href="pasta.html">View Recipe</a>
+          </div>
+        </div>
+
+        <div class="recipe-card">
+          <div class="recipe-image">🍗</div>
+          <div class="recipe-info">
+            <h3>Grilled Chicken</h3>
+            <div class="recipe-meta-inline">
+              <span class="difficulty medium">Medium</span>
+              <span class="rating">⭐⭐⭐⭐⭐</span>
+              <span class="time">30 mins</span>
+            </div>
+            <p>Juicy grilled chicken with lemon herb marinade</p>
+            <a href="chicken.html">View Recipe</a>
+          </div>
+        </div>
+      </div>
+
+      <h2 class="section-title">Popular Dinner</h2>
+
+      <div class="popular-grid">
+        <div class="popular-card">
+          <div class="popular-image">🍝</div>
+          <div class="popular-info">
+            <h4>Classic Tomato Pasta</h4>
+            <div class="popular-meta">
+              <span class="rating">⭐⭐⭐⭐⭐⭐</span>
+              <span class="difficulty medium">Medium</span>
+            </div>
+          </div>
+        </div>
+
+        <div class="popular-card">
+          <div class="popular-image">🍗</div>
+          <div class="popular-info">
+            <h4>Grilled Chicken</h4>
+            <div class="popular-meta">
+              <span class="rating">⭐⭐⭐⭐⭐</span>
+              <span class="difficulty medium">Medium</span>
+            </div>
+          </div>
+        </div>
       </div>
     </section>
 
@@ -47,5 +105,91 @@
         <span>Add</span>
       </a>
     </nav>
+
+    <script>
+      // Dinner recipe data
+      const dinnerRecipes = [
+        {
+          name: "Classic Tomato Pasta",
+          difficulty: "medium",
+          rating: 5,
+          time: "25 mins",
+          emoji: "🍝",
+          description:
+            "Traditional pasta with rich tomato sauce and fresh herbs",
+          url: "pasta.html",
+        },
+        {
+          name: "Grilled Chicken",
+          difficulty: "medium",
+          rating: 4,
+          time: "30 mins",
+          emoji: "🍗",
+          description: "Juicy grilled chicken with lemon herb marinade",
+          url: "chicken.html",
+        },
+      ];
+
+      // Search functionality
+      function searchRecipes() {
+        const searchTerm = document
+          .getElementById("searchInput")
+          .value.toLowerCase();
+        const recipeGrid = document.querySelector(".recipe-grid");
+
+        if (searchTerm === "") {
+          displayAllRecipes();
+          return;
+        }
+
+        const filteredRecipes = dinnerRecipes.filter(
+          (recipe) =>
+            recipe.name.toLowerCase().includes(searchTerm) ||
+            recipe.description.toLowerCase().includes(searchTerm),
+        );
+
+        displayRecipes(filteredRecipes, recipeGrid);
+      }
+
+      // Display all recipes
+      function displayAllRecipes() {
+        const recipeGrid = document.querySelector(".recipe-grid");
+        displayRecipes(dinnerRecipes, recipeGrid);
+      }
+
+      // Display recipes in grid
+      function displayRecipes(recipesToDisplay, container) {
+        container.innerHTML = recipesToDisplay
+          .map(
+            (recipe) => `
+    <div class="recipe-card">
+      <div class="recipe-image">${recipe.emoji}</div>
+      <div class="recipe-info">
+        <h3>${recipe.name}</h3>
+        <div class="recipe-meta-inline">
+          <span class="difficulty ${recipe.difficulty}">${recipe.difficulty}</span>
+          <span class="rating">${"⭐".repeat(recipe.rating)}</span>
+          <span class="time">${recipe.time}</span>
+        </div>
+        <p>${recipe.description}</p>
+        <a href="${recipe.url}">View Recipe</a>
+      </div>
+    </div>
+  `,
+          )
+          .join("");
+      }
+
+      // Search on Enter key
+      document
+        .getElementById("searchInput")
+        .addEventListener("keypress", function (e) {
+          if (e.key === "Enter") {
+            searchRecipes();
+          }
+        });
+
+      displayAllRecipes();
+    </script>
   </body>
 </html>
