--- a/omelette.html
+++ b/omelette.html
@@ -12,20 +12,83 @@
     </header>
 
     <section class="content">
+      <div class="recipe-header">
+        <div class="recipe-meta">
+          <span class="meta-item">⏱️ 10 mins</span>
+          <span class="meta-item">👥 1 serving</span>
+          <span class="meta-item">📊 Easy</span>
+        </div>
+      </div>
+
       <h2>Ingredients</h2>
       <ul>
-        <li>2 eggs</li>
-        <li>Salt</li>
-        <li>Pepper</li>
-        <li>Vegetables (optional)</li>
+        <li>3 large eggs</li>
+        <li>1 tablespoon butter or olive oil</li>
+        <li>2 tablespoons milk or cream (optional)</li>
+        <li>Salt and freshly ground black pepper to taste</li>
+        <li>¼ cup shredded cheese (cheddar, Swiss, or your choice)</li>
+        <li>
+          2 tablespoons diced vegetables (bell peppers, onions, mushrooms, etc.)
+        </li>
+        <li>Fresh herbs (chives, parsley, or dill) for garnish</li>
       </ul>
 
-      <h2>Steps</h2>
+      <h2>Instructions</h2>
       <ol>
-        <li>Beat the eggs</li>
-        <li>Heat pan with oil</li>
-        <li>Cook eggs and fold</li>
+        <li>
+          <strong>Prepare vegetables:</strong> If using vegetables, dice them
+          small and sauté in a little butter until tender. Set aside.
+        </li>
+        <li>
+          <strong>Beat eggs:</strong> In a bowl, crack eggs and add milk if
+          using. Beat with a fork until yolks and whites are combined but not
+          frothy.
+        </li>
+        <li>
+          <strong>Season eggs:</strong> Add salt and pepper to beaten eggs.
+          Don't over-season as cheese will add saltiness.
+        </li>
+        <li>
+          <strong>Heat pan:</strong> Heat an 8-inch non-stick skillet over
+          medium heat. Add butter and swirl to coat.
+        </li>
+        <li>
+          <strong>Cook eggs:</strong> Pour in eggs and let them set for about 30
+          seconds without stirring.
+        </li>
+        <li>
+          <strong>Push edges:</strong> Using a spatula, gently push cooked edges
+          toward center, tilting pan so uncooked egg runs underneath.
+        </li>
+        <li>
+          <strong>Add fillings:</strong> When eggs are mostly set but still
+          slightly wet on top, sprinkle cheese and vegetables over one half.
+        </li>
+        <li>
+          <strong>Fold omelette:</strong> Carefully fold the empty half over the
+          filled half using your spatula.
+        </li>
+        <li>
+          <strong>Finish cooking:</strong> Cook for another 30 seconds to melt
+          cheese completely.
+        </li>
+        <li>
+          <strong>Serve immediately:</strong> Slide omelette onto plate and
+          garnish with fresh herbs.
+        </li>
       </ol>
+
+      <div class="recipe-tips">
+        <h3>💡 Pro Tips</h3>
+        <ul>
+          <li>Use room temperature eggs for better mixing and cooking</li>
+          <li>Don't over-beat eggs - a few streaks of white are okay</li>
+          <li>Keep heat moderate to prevent browning before eggs are set</li>
+          <li>
+            For a French-style omelette, use only herbs and no fillings inside
+          </li>
+        </ul>
+      </div>
     </section>
 
     <nav class="bottom-nav">
