--- a/pasta.html
+++ b/pasta.html
@@ -12,20 +12,90 @@
     </header>
 
     <section class="content">
+      <div class="recipe-header">
+        <div class="recipe-meta">
+          <span class="meta-item">⏱️ 25 mins</span>
+          <span class="meta-item">👥 4 servings</span>
+          <span class="meta-item">📊 Easy</span>
+        </div>
+      </div>
+
       <h2>Ingredients</h2>
       <ul>
-        <li>Pasta</li>
-        <li>Tomato sauce</li>
-        <li>Garlic</li>
-        <li>Cheese</li>
+        <li>12 oz pasta (spaghetti, penne, or your choice)</li>
+        <li>2 tablespoons olive oil</li>
+        <li>4-5 cloves garlic, minced</li>
+        <li>1 (28 oz) can crushed tomatoes</li>
+        <li>1 (6 oz) can tomato paste</li>
+        <li>1 teaspoon dried oregano</li>
+        <li>1 teaspoon dried basil</li>
+        <li>½ teaspoon red pepper flakes (optional)</li>
+        <li>Salt and black pepper to taste</li>
+        <li>¼ cup fresh basil, chopped</li>
+        <li>½ cup grated Parmesan cheese</li>
+        <li>2 tablespoons fresh parsley, chopped</li>
       </ul>
 
-      <h2>Steps</h2>
+      <h2>Instructions</h2>
       <ol>
-        <li>Boil pasta</li>
-        <li>Prepare sauce</li>
-        <li>Mix pasta with sauce</li>
+        <li>
+          <strong>Cook pasta:</strong> Bring a large pot of salted water to
+          boil. Add pasta and cook according to package directions until al
+          dente.
+        </li>
+        <li>
+          <strong>Reserve pasta water:</strong> Before draining, save 1 cup of
+          pasta cooking water.
+        </li>
+        <li><strong>Drain pasta:</strong> Drain pasta well and set aside.</li>
+        <li>
+          <strong>Sauté garlic:</strong> In a large skillet, heat olive oil over
+          medium heat. Add minced garlic and cook for 1 minute until fragrant.
+        </li>
+        <li>
+          <strong>Add tomatoes:</strong> Add crushed tomatoes, tomato paste,
+          oregano, basil, and red pepper flakes. Stir well.
+        </li>
+        <li>
+          <strong>Simmer sauce:</strong> Bring sauce to a simmer, then reduce
+          heat to low. Cover and let simmer for 10-15 minutes.
+        </li>
+        <li>
+          <strong>Season sauce:</strong> Add salt and pepper to taste. If sauce
+          is too thick, add some reserved pasta water.
+        </li>
+        <li>
+          <strong>Combine with pasta:</strong> Add drained pasta to the skillet
+          with sauce. Toss well to coat all pasta.
+        </li>
+        <li>
+          <strong>Add fresh herbs:</strong> Stir in fresh basil and parsley.
+        </li>
+        <li>
+          <strong>Serve:</strong> Top with grated Parmesan cheese and additional
+          fresh basil if desired.
+        </li>
       </ol>
+
+      <div class="recipe-tips">
+        <h3>💡 Pro Tips</h3>
+        <ul>
+          <li>
+            Save pasta water - it's liquid gold for adjusting sauce consistency
+          </li>
+          <li>
+            Don't rinse pasta after draining - sauce sticks better to starchy
+            pasta
+          </li>
+          <li>
+            For richer sauce, add a splash of red wine while sautéing garlic
+          </li>
+          <li>
+            Let sauce rest for 5 minutes off heat before serving for better
+            flavor
+          </li>
+        </ul>
+      </div>
     </section>
 
     <nav class="bottom-nav">
